refactor: alterando rota patienties para patients
