# app/Http/Controllers/PatientController.php
@@ -23,16 +23,65 @@ class PatientController extends Controller
 
     public function store(StorePatientRequest $request): Response
     {
-        $this->patient->create($request->all());
-
-        return response(status: Response::HTTP_CREATED, headers: [
-            'Location' => url("/api/patients/{$this->patient->id}"),
+        $patient = $this->patient->create($request->all());
+        return response(status:Response::HTTP_CREATED, headers:[
+          'Location' => url("/api/patients/{$patient->id}")
         ]);
-    }
+    
+    }    
 
-    public function show(Patient $patient): JsonResponse
+    /**
+     * @OA\Get(
+     *     path="/api/patienties/{patient}",
+     *     summary="Get patient by ID",
+     *     description="Returns a single patient",
+     *     operationId="getPatientById",
+     *
+     *     @OA\Parameter(
+     *         name="patient",
+     *         in="path",
+     *         description="ID of the patient",
+     *         required=true,
+     *
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="Patient located successfully",
+     *
+     *         @OA\JsonContent(
+     *             type="object",
+     *             ref="#/components/schemas/Patient"
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=404,
+     *         description="Patient not found",
+     *
+     *         @OA\JsonContent(
+     *             type="object",
+     *
+     *               @OA\Schema(
+     *                  schema="Error",
+     *                  type="object",
+     *                  title="Error",
+     *                  properties={
+     *
+     *                      @OA\Property(property="error", type="string", description="Error message"),
+     *                      @OA\Property(property="code", type="integer", description="Error code"),
+     *                  },
+     *              )
+     *          )
+     *     )
+     * )
+     */
+    public function show(Patient $patient) : JsonResponse
     {
-        return response()->json($patient);
+        return response()->json($patient,JsonResponse::HTTP_OK);
     }
 
     public function update(UpdatePatientRequest $request, Patient $patient): JsonResponse
